laborations/lab2/testsuite/bad/redecl_var_after_block_3.cc
int main() {
	int x;
	{
		int y;
	}
	int x;
	return 0;
}
